--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,1 +1,15 @@
-//
+// Variables
+@import 'variables';
+
+// Bootstrap
+@import '~bootstrap/scss/bootstrap';
+
+html,body {
+    height: 100%;
+    color: #011328;
+}
+
+.fill {
+    min-height: 100%;
+    height: 100%;
+}
