--- a/public/css/app.css
+++ b/public/css/app.css
@@ -20705,3 +20705,16 @@ body {
   height: 100%;
 }
 
+.pp-bullet {
+  font-weight: 200;
+  font-size: 14px;
+  margin-bottom: 10px;
+  color: #6c757d;
+}
+
+.pp-bullet i {
+  width: 15px;
+  margin-right: 5px;
+  color: #333;
+}
+
