--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -18,3 +18,16 @@ html,body {
     min-height: 100%;
     height: 100%;
 }
+
+.pp-bullet{
+	font-weight: 200;
+	font-size: 14px;
+	margin-bottom: 10px;
+	color: #6c757d;
+}
+
+.pp-bullet i{
+	width: 15px;
+	margin-right: 5px;
+	color: #333;
+}
