--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -30,7 +30,15 @@ $teal: #20c9a6 !default;
 $cyan: #43c6e7 !default;
 
 // Note: We don't have $primary here as it overrides bootstrap vars.
-$secondary: #484b4c;
+$primary: $envColorPrimary;
+$secondary: $envColorSecondary;
+$tertiary: $envColorTertiary;
+
+$info: $envColorInfo;
+$warning: $envColorWarning;
+$danger: $envColorDanger;
+$success: $envColorSuccess;
+
 $tertiary: $darkblue;
 
 // Custom Colors
@@ -55,7 +63,7 @@ $box-shadow: 0 0.15rem 1.75rem 0 rgba($gray-900, .15) !default;
 // $box-shadow-lg: 0 1rem 3rem rgba($black, .175) !default;
 
 // Borders Radius
-$border-radius: 0rem !default;
+$border-radius: $envBorderRadius !default;
 $border-color: darken($gray-200, 2%);
 
 // Spacing Variables
