start of moving to vite

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -1,6 +1,8 @@
 // Override Bootstrap default variables here
 // Do not edit any of the files in /vendor/bootstrap/scss/!
 
+@import "_env";
+
 // Color Variables
 // Bootstrap Color Overrides
 
